--- a/exercicio19/fundo03.html
+++ b/exercicio19/fundo03.html
@@ -7,11 +7,9 @@
     <title>OPAAA</title>
     <style>
         body{
-            background-color: black;
-            height: 100vh;
-            background-image: url(imagens/wallpaper002.jpg);
-            background-position: center center;
-            background-repeat: no-repeat;
+            height: 97vh;
+
+            background: black url(imagens/wallpaper002.jpg) no-repeat fixed;
             background-size: cover;
         }
 
@@ -23,6 +21,7 @@
             padding: 15px;
             border-radius: 20px;
             margin: auto;
+
         }
 
         main h1{
@@ -32,6 +31,7 @@
         main p{
             text-align: justify;
             text-indent: 20px;
+            line-height: 1.5em;
         }
     </style>
 </head>
@@ -40,6 +40,9 @@
         <H1>
             Teste de Imagem de Fundo
         </H1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, labore facilis? Sequi illum numquam voluptates neque quia, odit culpa, dignissimos beatae quam recusandae eos molestiae blanditiis corrupti! Perferendis, debitis sint! Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia perferendis qui voluptas cumque, sunt ducimus doloribus quis. Omnis eos nesciunt hic at incidunt delectus velit adipisci! Voluptas facilis a illo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita reprehenderit aut explicabo repellendus necessitatibus soluta praesentium voluptatum quae! Eaque ratione veritatis perferendis nobis fuga. Deleniti cumque consequatur dolor cupiditate obcaecati?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, labore facilis? Sequi illum numquam voluptates neque quia, odit culpa, dignissimos beatae quam recusandae eos molestiae blanditiis corrupti! Perferendis, debitis sint! Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia perferendis qui voluptas cumque, sunt ducimus doloribus quis. Omnis eos nesciunt hic at incidunt delectus velit adipisci! Voluptas facilis a illo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita reprehenderit aut explicabo repellendus necessitatibus soluta praesentium voluptatum quae! Eaque ratione veritatis perferendis nobis fuga. Deleniti cumque consequatur dolor cupiditate obcaecati?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, labore facilis? Sequi illum numquam voluptates neque quia, odit culpa, dignissimos beatae quam recusandae eos molestiae blanditiis corrupti! Perferendis, debitis sint! Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia perferendis qui voluptas cumque, sunt ducimus doloribus quis. Omnis eos nesciunt hic at incidunt delectus velit adipisci! Voluptas facilis a illo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita reprehenderit aut explicabo repellendus necessitatibus soluta praesentium voluptatum quae! Eaque ratione veritatis perferendis nobis fuga. Deleniti cumque consequatur dolor cupiditate obcaecati?</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, labore facilis? Sequi illum numquam voluptates neque quia, odit culpa, dignissimos beatae quam recusandae eos molestiae blanditiis corrupti! Perferendis, debitis sint! Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia perferendis qui voluptas cumque, sunt ducimus doloribus quis. Omnis eos nesciunt hic at incidunt delectus velit adipisci! Voluptas facilis a illo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita reprehenderit aut explicabo repellendus necessitatibus soluta praesentium voluptatum quae! Eaque ratione veritatis perferendis nobis fuga. Deleniti cumque consequatur dolor cupiditate obcaecati?</p>
     </main>
 </body>
