--- a/exercicio20/joaninha.html
+++ b/exercicio20/joaninha.html
@@ -13,7 +13,7 @@
             Cordel Moderno
         </h1>
         <p>
-            Por <a href="https://www.recantodasletras.com.br/poesias/3186743"><strong>Milton Duarte</strong></a>
+            Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank"><strong>Milton Duarte</strong></a>
         </p>
     </header>
     <main>
@@ -27,15 +27,17 @@
                 Antes que eu caduque
                 Vou dizer tudo em poesia.
             </p>
-            <p>
-                Não é mais como era antes
-                É tudo abreviado
-                "Você" só tem duas letras
-                O "O" e o "E" foi riscado
-                Para declarar o amor
-                Basta botar uma flor
-                E um coração desenhado.
-            </p>
+            <div id="primeira">
+                <p id="pr">
+                    Não é mais como era antes
+                    É tudo abreviado
+                    "Você" só tem duas letras
+                    O "O" e o "E" foi riscado
+                    Para declarar o amor
+                    Basta botar uma flor
+                    E um coração desenhado.
+                </p>
+            </div>
 
             <p>
                 Arroba agora não pesa
@@ -45,24 +47,29 @@
                 Agora é .com
                 Se o saite é muito bom
                 Ele vale um alto preço.
-                Pra piorar a liguagem
-                O emoticom é um risco
-                Tem símbolo para tudo
-                Ponto e vírgula e um asterisco
-                Um beijo significa
-                Pra entender como fica
-                Decifre esse rabisco.
+
+                <p>
+                    Pra piorar a liguagem
+                    O emoticom é um risco
+                    Tem símbolo para tudo
+                    Ponto e vírgula e um asterisco
+                    Um beijo significa
+                    Pra entender como fica
+                    Decifre esse rabisco.
+                </p>
             </p>
 
-            <p>
-                Tenho saudade das cartas
-                Escritas com a própria mão
-                Mandava no mês de Junho
-                Só chegava no Verão
-                Mas matava a saudade
-                Era texto de verdade
-                Nas linhas do coração.
-            </p>
+            <div id="segundo">
+                <p id="se">
+                    Tenho saudade das cartas
+                    Escritas com a própria mão
+                    Mandava no mês de Junho
+                    Só chegava no Verão
+                    Mas matava a saudade
+                    Era texto de verdade
+                    Nas linhas do coração.
+                </p>
+            </div>
 
             <p>
                 Agora, escrevo e envio
@@ -84,7 +91,7 @@
     </main>
 
     <footer>
-        Site criado <a href="https://github.com/Mar-B-C">Marcio Bezerra</a> para o <a href="https://www.cursoemvideo.com/">CursoemVideo</a>
+        Site criado <a href="https://github.com/Mar-B-C" target="_blank">Marcio Bezerra</a> para o <a href="https://www.cursoemvideo.com/" target="_blank">CursoemVideo</a>
     </footer>
 </body>
 </html>
