--- a/exercicio21/tabelas2.html
+++ b/exercicio21/tabelas2.html
@@ -16,6 +16,7 @@
             width: 400px;
             border-collapse: collapse;
             margin: auto;
+            position: relative;
         }
         caption{
             padding: 10px;
@@ -24,10 +25,19 @@
             font-weight: bold;
             border: 1px solid black;
         }
+        thead > tr > th{
+            position: sticky;
+            top: -1px;
+            background-color: rgb(88, 88, 88);
+            border: 1px solid black;
+        }
         thead, tfoot{
             color: white;
             background-color: rgb(88, 88, 88);
             border: 1px solid black;
+        }
+        tbody tr:nth-child(odd){
+            background-color: rgb(211, 211, 211);
         }
         td, th{
             padding: 10px;
@@ -35,6 +45,10 @@
         }
         .nm{
             text-align: right;
+        }
+        p{
+            width: 300px;
+            padding: 20px;
         }
 
 
@@ -158,6 +172,62 @@
                     0
                 </td>
             </tr>
+            <tr>
+                <td>
+                    Hiedro
+                </td>
+                <td class="nm">
+                    0
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Hiedro
+                </td>
+                <td class="nm">
+                    0
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Hiedro
+                </td>
+                <td class="nm">
+                    0
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Hiedro
+                </td>
+                <td class="nm">
+                    0
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Hiedro
+                </td>
+                <td class="nm">
+                    0
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Hiedro
+                </td>
+                <td class="nm">
+                    0
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Hiedro
+                </td>
+                <td class="nm">
+                    0
+                </td>
+            </tr>
         </tbody>
         <tfoot>
             <tr>
@@ -170,6 +240,10 @@
             </tr>
         </tfoot>
     </table>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, voluptates et! Id maiores labore quam nulla quos ipsam vero, perspiciatis voluptas esse! Deserunt numquam aut mollitia perferendis obcaecati natus ipsum?Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae iure ipsum autem at deleniti facilis aspernatur aliquam totam quisquam, quos id accusamus excepturi facere corrupti ullam? Ab ad ut dolore?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo provident repellendus eum? Aliquid iste fugiat officia odio libero sed dicta labore reiciendis! Nobis maxime impedit modi fugit, repellendus harum minima?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates id animi numquam deleniti nostrum autem ipsa sapiente quas, dolor quae, voluptatem fugit qui, magni alias! Veritatis nostrum expedita fugit suscipit!Lorem
+    </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, voluptates et! Id maiores labore quam nulla quos ipsam vero, perspiciatis voluptas esse! Deserunt numquam aut mollitia perferendis obcaecati natus ipsum?Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae iure ipsum autem at deleniti facilis aspernatur aliquam totam quisquam, quos id accusamus excepturi facere corrupti ullam? Ab ad ut dolore?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo provident repellendus eum? Aliquid iste fugiat officia odio libero sed dicta labore reiciendis! Nobis maxime impedit modi fugit, repellendus harum minima?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates id animi numquam deleniti nostrum autem ipsa sapiente quas, dolor quae, voluptatem fugit qui, magni alias! Veritatis nostrum expedita fugit suscipit!Lorem
+    </p>
     
 </body>
 </html>
