--- a/exercicio23/desafio-final.html
+++ b/exercicio23/desafio-final.html
@@ -9,6 +9,7 @@
         body{
             padding-top: 50px;
             font-family: Arial, Helvetica, sans-serif;
+            background-color: b;
         }
 
 
@@ -19,7 +20,7 @@
             border-collapse: collapse;
         }
         caption{
-            font-size: 1.3em;
+            font-size: em;
             border: 1px solid black;
             background-color: gray;
             padding: 10px;
