--- a/exercicio24/formulario02.html
+++ b/exercicio24/formulario02.html
@@ -11,12 +11,17 @@
     <form action="documento.php" method="post" autocomplete="off">
     <p>
         <label for="inome"> nome:</label>
-        <input type="text" name="nome" id="inome" required minlength="6">
+        <input type="text" name="nome" id="inome" required minlength="6" placeholder="coloque seu nome">
     </p>
 
     <p>
         <label for="isenha">senha</label>
-        <input type="password" name="senha" id="isenha" required minlength="6">      
+        <input type="password" name="senha" id="isenha" required minlength="6" placeholder="coloque sua senha">      
+    </p> 
+
+    <p>
+        <label for="inumero">idade</label>
+        <input type="number" name="numero" id="inumero" placeholder="coloque sua idade" min="0" max="10" step="0.5">
     </p>
 
     <p>
